--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,8 +13,8 @@
 
 
   <!-- Adopt Tab -->
-  <ion-tab title="colors" icon="icon ion-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
+  <ion-tab title="colors" icon="icon ion-heart" href="#/tab/colors">
+    <ion-nav-view name="tab-colors"></ion-nav-view>
   </ion-tab>
 
 
