fixed scrolling issue

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,5 @@
 <ion-view title="MAP">
-  <ion-content class="has-header padding">
+  <ion-content class="" scroll="false">
     <div class="row">
       <button ng-click="drawMap()" class="button button-full button-positive">RENDER</button>
     </div>
